# LimitOrderBook

./: .clang-format  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  install-dependencies.sh  main.cpp
data_structures/: CMakeLists.txt  enums.hpp  limit.cpp  limit.hpp  order.cpp  order.hpp  trade.hpp
exchange/: CMakeLists.txt  exchange.cpp  exchange.hpp
init/: instruments.txt
orderbook/: CMakeLists.txt  orderbook.cpp  orderbook.hpp
postman/: UnlimitedOrderBook api requests.postman_collection.json
repository/: CMakeLists.txt  order_repository.cpp  order_repository.hpp  trade_repository.cpp  trade_repository.hpp
scylla/: scylla.yaml  trade-repository.txt
server/: CMakeLists.txt  websocket_client.cpp  websocket_client.hpp  websocket_server.cpp
src/: main.cpp
src/data_structures/: CMakeLists.txt  enums.hpp  limit.cpp  limit.hpp  order.cpp  order.hpp  snapshot.hpp  spread.hpp  trade.hpp
src/exchange/: CMakeLists.txt  exchange.cpp  exchange.hpp
src/mappers/: orderjson_order_mapper.hpp
src/orderbook/: CMakeLists.txt  orderbook.cpp  orderbook.hpp
src/repository/: CMakeLists.txt  order_repository.cpp  order_repository.hpp  trade_repository.cpp  trade_repository.hpp
src/server/: CMakeLists.txt  server.cpp  server.hpp  websocket_client.cpp  websocket_server.cpp  websocket_server.hpp
src/server/handlers/: consts.hpp  handler.hpp  order_handler.cpp  order_handler.hpp  orderbook_info_handler.cpp  orderbook_info_handler.hpp
src/server/handlers/response/: order_response.hpp  snapshot_response.hpp
src/server/response/: order_response.hpp
src/server/websocket/: websocket_client.cpp  websocket_client.hpp  websocket_server.cpp  websocket_server.hpp
src/server/wrappers/: coinbase_wrapper.cpp  coinbase_wrapper.hpp  wrapper.hpp
src/storage/: CMakeLists.txt  rbtree.hpp
src/utils/: CMakeLists.txt  defer.hpp  file_utils.hpp  function_task.hpp  ringbuffer.hpp  seastar_signal_catcher.hpp  thread_pool.hpp  time.hpp  uuid_generator.hpp
storage/: CMakeLists.txt  rbtree.hpp
tests/unit/: CMakeLists.txt  test_exchange.cpp  test_limit.cpp  test_order.cpp  test_order_repository.cpp  test_orderbook.cpp  test_rbtree.cpp  test_ringbuffer.cpp  test_trade_repository.cpp
utils/: convert_time_to_string.hpp  defer.hpp  ringbuffer.hpp  thread_pool.hpp
